<resources>
    <string name="app_name">InHim</string>
    <string name="reading">阅读</string>
    <string name="video">视频</string>
    <string name="listen_to_the">聆听</string>
    <string name="my">我的</string>
    <string name="ok">确认</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_title">登录InHim</string>
    <string name="welcome_title">欢迎来到资讯APP</string>
    <string name="user_hint">输入手机号码</string>
    <string name="password_hint">密码</string>
    <string name="save_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_login">快捷登录</string>
    <string name="encounter_problem">遇到问题</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="please_enter_code">请输入验证码</string>
    <string name="user_new_hint">请输入新手机号码</string>
    <string name="back_login">返回登录</string>
    <string name="exit_login">退出登录</string>
    <string name="user_nicheng">昵称：</string>
    <string name="basic_information">基本资料</string>
    <string name="collection">收藏</string>
    <string name="history">历史</string>
    <string name="download_list">下载列表</string>
    <string name="setting">设置</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="share_app">分享APP</string>
    <string name="login_instructions">我已阅读并同意</string>
    <string name="login_agreement">《InHim用户服务协议》</string>
    <string name="look_all">查看全部</string>

    <!--我的信息界面-->
    <string name="user_name">用户名</string>
    <string name="info_photo">头像</string>
    <string name="info_name">姓名</string>
    <string name="info_ethnic">民族</string>
    <string name="info_belief">信仰状况</string>
    <string name="info_believing_year">信主年份</string>
    <string name="info_bebaptized_year">受洗年份</string>
    <string name="info_marriage">婚姻状况</string>
    <string name="info_kiddo">儿女</string>
    <string name="info_education">教育程度</string>
    <string name="info_occupation">职业</string>
    <string name="info_jobless">没有工作</string>
    <string name="info_retire">退休</string>
    <string name="info_student">学生</string>
    <string name="info_others">其它</string>
    <string name="info_telephone">手机</string>
    <string name="info_email">邮箱</string>
    <string name="info_address">通讯地址</string>
    <string name="info_postcode">通讯地址邮编</string>
    <string name="submit">提交</string>
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="title_activity_finalreport">FinalreportActivity</string>

    <string name="dialog_cancel">取消</string>
    <string name="dialog_submit">完成</string>
    <string name="close">关闭</string>
    <string name="action_notes">讲义</string>
    <string name="action_ml">目录</string>
    <string name="project">专题</string>
    <string name="test">没有此权限，无法开启这个功能，请开启权限没有此权限，无法开启这个功能，请开启权限没有此权限，无法开启这个功能，请开启权限</string>
</resources>
