<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:layout_marginTop="@dimen/base_dimen_5"
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_dimen_0"
        android:src="@mipmap/close"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="@dimen/text_size_23"
        android:textColor="@color/color333"
        android:gravity="center"
        android:layout_marginTop="@dimen/base_dimen_50"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen_50"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:layout_marginLeft="@dimen/base_dimen_0"
            android:src="@mipmap/phone"/>
        <EditText
            android:id="@+id/ed_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_hint"
            android:layout_gravity="center"
            android:textColorHint="@color/color999"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:textColor="@color/color999"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginRight="@dimen/base_dimen_15"
        android:layout_marginBottom="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_5dp"
        android:background="@color/color999"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:layout_marginLeft="@dimen/base_dimen_0"
            android:src="@mipmap/emi_code"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/please_enter_code"
            android:layout_gravity="center"
            android:textColorHint="@color/color999"
            android:textColor="@color/color999"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:background="@null"/>
        <TextView
            android:id="@+id/tv_geSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/color999"
            android:textSize="@dimen/text_size_16"
            android:layout_marginRight="@dimen/base_dimen_15"
            android:text="@string/get_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginRight="@dimen/base_dimen_15"
        android:layout_marginBottom="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_5dp"
        android:background="@color/color999"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_11"
        android:layout_marginRight="@dimen/base_dimen_15"
        style="@style/btn_login_style"
        android:text="@string/next"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_login"
            android:textColor="@color/color999"
            android:textSize="@dimen/text_size_16"
            android:layout_marginTop="@dimen/base_dimen_0"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/base_dimen_0"
            android:layout_marginRight="@dimen/base_dimen_5"
            android:layout_marginLeft="@dimen/base_dimen_5"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen_5"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/base_dimen_15"
            android:background="@color/color999"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_dimen_5dp"
            android:layout_marginRight="@dimen/base_dimen_5dp"
            android:text="@string/quick_login"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/base_dimen_15"
            android:background="@color/color999"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_weixin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/weixin"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/base_dimen_0"/>
</LinearLayout>