<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:layout_width="@dimen/base_dimen_5"
        android:layout_height="@dimen/base_dimen_5"
        android:layout_margin="@dimen/base_dimen_0"
        android:src="@mipmap/back"/>
    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="当前手机号"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/color333"
        android:gravity="center"
        android:layout_marginTop="@dimen/base_dimen_60"
        android:layout_marginBottom="@dimen/base_dimen_60"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/base_dimen_5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/base_dimen_8"
            android:layout_height="@dimen/base_dimen_8"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:layout_marginLeft="@dimen/base_dimen_0"
            android:layout_gravity="center"
            android:src="@mipmap/phone"/>
        <EditText
            android:id="@+id/ed_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_new_hint"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_18"
            android:textColorHint="@color/color999"
            android:textColor="@color/color999"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginRight="@dimen/base_dimen_15"
        android:layout_marginBottom="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_5dp"
        android:background="@color/color999"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/base_dimen_8"
            android:layout_height="@dimen/base_dimen_8"
            android:layout_marginRight="@dimen/base_dimen_0"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/base_dimen_0"
            android:src="@mipmap/emi_code"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/please_enter_code"
            android:layout_gravity="center"
            android:textColorHint="@color/color999"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/color999"
            android:background="@null"/>
        <Button
            android:id="@+id/btn_gecode"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/btn_getcode"
            android:layout_marginRight="@dimen/base_dimen_15"
            android:inputType="text"
            android:text="@string/get_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginRight="@dimen/base_dimen_15"
        android:layout_marginBottom="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_5dp"
        android:background="@color/color999"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_dimen_15"
        android:layout_marginTop="@dimen/base_dimen_15"
        android:layout_marginRight="@dimen/base_dimen_15"
        style="@style/btn_login_style"
        android:text="@string/submit"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_dimen_5"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/base_dimen_15"
            android:src="@mipmap/message"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_dimen_5dp"
            android:layout_marginRight="@dimen/base_dimen_5dp"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color6666"
            android:text="更换手机号后，下次登录可使用新手机号"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_encounter_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encounter_problem"
        android:textColor="@color/color6666"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/base_dimen_0"
        android:textSize="@dimen/text_size_12"/>
</LinearLayout>